<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="app_name">ZiliZili</string>
    <string name="home_top_default_nickname">未登录</string>
    <string name="logout">注销</string>
    <string name="main_page_attentions">关注</string>
    <string name="main_page_bangumi">番剧</string>
    <string name="main_page_category">分区</string>
    <string name="main_page_discover">发现</string>
    <string name="main_page_game">游戏</string>
    <string name="main_page_home">推荐</string>
    <string name="main_page_my_center">我的</string>
    <string name="menu_top_download_tips">离线列表</string>
    <string name="menu_top_search_tips">搜索</string>
    <string name="mycenter_coin_text">硬币：%s</string>
    <string name="nav_favorites">我的收藏</string>
    <string name="nav_following">关注的人</string>
    <string name="nav_help">帮助与反馈</string>
    <string name="nav_histories">历史记录</string>
    <string name="nav_home">首页</string>
    <string name="nav_login_click_avatar">点击头像登录</string>
    <string name="nav_offline_manager">离线管理</string>
    <string name="nav_pay">消费记录</string>
    <string name="nav_settings">设置</string>
    <string name="pref_category_title_danmaku_style">弹幕选项</string>
    <string name="pref_screen_summary_advanced">建议在开发者指导下修改</string>
    <string name="pref_screen_title_advanced">调试设置</string>
    <string name="pref_summaryOff_DFM_HardwareAcc">默认绘制模式</string>
    <string name="pref_summaryOn_DFM_HardwareAcc">硬件加速支持 4.0+ 系统，更省电更流畅</string>
    <string name="pref_summary_aoutOpenSLES">只要播放器还有声音，就不要开这个设置</string>
    <string name="pref_summary_app_version_fmt">当前版本：%s</string>
    <string name="pref_summary_danmaku_Monospaced">针对英文字体优化效果</string>
    <string name="pref_summary_danmaku_engine_auto">自动选择（推荐）</string>
    <string name="pref_summary_danmaku_engine_dfm">烈焰弹幕使 [Danmaku Flame Master]</string>
    <string name="pref_summary_danmaku_engine_dfm_plus">超·烈焰弹幕使 [Danmaku Flame Master]</string>
    <string name="pref_summary_danmaku_engine_dfm_sr">+ StupidRenderer</string>
    <string name="pref_summary_danmaku_engine_v1">传统弹幕引擎</string>
    <string name="pref_summary_danmaku_hide_by_default">你确定？</string>
    <string name="pref_summary_danmaku_max_on_screen_auto">自动(默认)</string>
    <string name="pref_summary_danmaku_max_on_screen_few">少</string>
    <string name="pref_summary_danmaku_max_on_screen_many">多</string>
    <string name="pref_summary_danmaku_max_on_screen_normal">通常</string>
    <string name="pref_summary_danmaku_max_on_screen_unlimited">无限弹幕制</string>
    <string name="pref_summary_danmaku_style_bold">部分字体无效或导致弹幕卡顿</string>
    <string name="pref_summary_danmaku_text_auto">自动选择</string>
    <string name="pref_summary_danmaku_text_none">普通（最快）</string>
    <string name="pref_summary_danmaku_text_projection">45°投影（实验性）</string>
    <string name="pref_summary_danmaku_text_shadow">阴影（推荐）</string>
    <string name="pref_summary_danmaku_text_thick_stroke">描边（最好）</string>
    <string name="pref_summary_disable_push">会错过有意思的内容哦</string>
    <string name="pref_summary_disable_splash">直接进入主界面</string>
    <string name="pref_summary_download_custom_folder">自定义目录</string>
    <string name="pref_summary_download_enable_auto_start">自动开始未完成的下载任务</string>
    <string name="pref_summary_download_enable_non_wifi">允许通过需要付费的移动网络下载</string>
    <string name="pref_summary_download_storage_primary_external">主存储</string>
    <string name="pref_summary_download_storage_secondary_external">副存储</string>
    <string name="pref_summary_hide_navigation">隐藏播放界面的虚拟键</string>
    <string name="pref_summary_joinus">遵从中二力量的召唤，和我签订契约吧！少年</string>
    <string name="pref_summary_preferences">设置</string>
    <string name="pref_summary_resolve_bili_cdn_play">非海外用户大概会减速吧</string>
    <string name="pref_summary_screen_codecPref">解码设置</string>
    <string name="pref_summary_screen_danmakuPref">弹幕设置</string>
    <string name="pref_summary_screen_downloadPref">离线设置</string>
    <string name="pref_title_DFM_HardwareAcc">DFM 弹幕硬件加速渲染</string>
    <string name="pref_title_VoutViewType">视频输出方式</string>
    <string name="pref_title_about">关于</string>
    <string name="pref_title_aoutOpenSLES">OpenSL ES</string>
    <string name="pref_title_category_advanced">高级</string>
    <string name="pref_title_category_aout">音频输出</string>
    <string name="pref_title_category_codecMode">解码模式选择</string>
    <string name="pref_title_category_misc">其它</string>
    <string name="pref_title_category_play">播放</string>
    <string name="pref_title_category_swConfig">软件解码设置</string>
    <string name="pref_title_category_vout">视频输出</string>
    <string name="pref_title_check_update">检查更新</string>
    <string name="pref_title_choose_danmaku_engine">弹幕引擎选择</string>
    <string name="pref_title_clearImage">清空图片缓存</string>
    <string name="pref_title_clearSearchHistory">清空搜索记录</string>
    <string name="pref_title_completeAction">播放完成后动作</string>
    <string name="pref_title_cpu_info">CPU 信息</string>
    <string name="pref_title_danmaku_Monospaced">使用等宽字体</string>
    <string name="pref_title_danmaku_block_bottom">屏蔽底端弹幕</string>
    <string name="pref_title_danmaku_block_mode">屏蔽模式</string>
    <string name="pref_title_danmaku_block_settings">关键词 / 用户屏蔽</string>
    <string name="pref_title_danmaku_block_top">屏蔽顶端弹幕</string>
    <string name="pref_title_danmaku_engine_settings">弹幕引擎</string>
    <string name="pref_title_danmaku_hide_by_default">默认隐藏弹幕</string>
    <string name="pref_title_danmaku_max_on_screen">同屏弹幕密度</string>
    <string name="pref_title_danmaku_style_bold">开启粗体</string>
    <string name="pref_title_danmaku_text_style">弹幕边框样式</string>
    <string name="pref_title_diagnostics">网络诊断</string>
    <string name="pref_title_disable_push">不接收推送消息</string>
    <string name="pref_title_disable_splash">禁用启动动画</string>
    <string name="pref_title_download_enable_auto_start">自动下载</string>
    <string name="pref_title_download_enable_non_wifi">启用移动网络</string>
    <string name="pref_title_download_networkOption">网络设置</string>
    <string name="pref_title_download_storage">下载位置</string>
    <string name="pref_title_feed_back">反馈</string>
    <string name="pref_title_ffmpegSkipLoopFilter">跳过循环滤波 (loop-filter)</string>
    <string name="pref_title_help_preferences">帮助</string>
    <string name="pref_title_hide_navigation">全屏播放</string>
    <string name="pref_title_joinus">加入我们</string>
    <string name="pref_title_license">开放源代码许可</string>
    <string name="pref_title_mediaSource">清晰度选择</string>
    <string name="pref_title_preferences">设置</string>
    <string name="pref_title_resetPreferences">恢复初始设置</string>
    <string name="pref_title_resolve_bili_cdn_play">海外视频加速</string>
    <string name="pref_title_screen_codecPref">解码设置</string>
    <string name="pref_title_screen_danmakuPref">弹幕设置</string>
    <string name="pref_title_screen_downloadPref">离线设置</string>
    <string name="pref_title_voutSurfaceFormat">像素格式</string>
    <string name="search_hint">搜索视频,番剧,up主或av号</string>
    <string name="title_game">游戏中心</string>
    <string name="title_theme_store">切换主题</string>
    <string name="blc_device_dpi">hdpi</string>
    <string name="umeng_fb_back">Back</string>
    <string name="umeng_fb_contact_info">Contact Info</string>
    <string name="umeng_fb_contact_info_hint">Email, MSN, Gtalk, or whatever we can find you.</string>
    <string name="umeng_fb_notification_ticker_text">Got new reply</string>
    <string name="umeng_fb_reply_content_default">Your precious feedback are appriciated.</string>
    <string name="umeng_fb_send">Send</string>
    <string name="umeng_fb_title">Feedback</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_pause_notification_prefix">Pause:</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="umeng_fb_change_contact_title">Change contact Info</string>
    <string name="umeng_fb_contact_email">Email</string>
    <string name="umeng_fb_contact_key_email">email</string>
    <string name="umeng_fb_contact_key_other">plain</string>
    <string name="umeng_fb_contact_key_phone">phone</string>
    <string name="umeng_fb_contact_key_qq">qq</string>
    <string name="umeng_fb_contact_other">Other</string>
    <string name="umeng_fb_contact_phone">Phone</string>
    <string name="umeng_fb_contact_qq">QQ</string>
    <string name="umeng_fb_contact_save">Save</string>
    <string name="umeng_fb_count_down">Count down</string>
    <string name="umeng_fb_feedback">Feedback</string>
    <string name="umeng_fb_no_record_permission">No permission of record</string>
    <string name="umeng_fb_notification_content_formatter_multiple_msg">You received %d new replies from the app developer.</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="author_video_loading">加载中</string>
    <string name="clear">清空</string>
    <string name="game_status_text_normal">下载</string>
    <string name="no_data_tips">╮(╯3╰)╭再怎么找也没有啦</string>
    <string name="play">点击播放</string>
    <string name="title_histories">历史记录</string>
    <string name="action_settings">设置</string>
    <string name="cache_all">全部缓存</string>
    <string name="cache_list">离线列表</string>
</resources>