<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_game"
        android:icon="@drawable/ic_menu_top_game_center"
        android:orderInCategory="100"
        android:title="@string/main_page_game"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_toolbar_menu_download"
        android:orderInCategory="100"
        android:title="@string/game_status_text_normal"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_toolbar_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>
