<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <derson.com.multipletheme.colorUi.widget.ColorAppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:fitsSystemWindows="true">
        <!--app:popupTheme="@style/AppTheme.PopupOverlay"-->
        <derson.com.multipletheme.colorUi.widget.ColorToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.App.Toolbar.Home"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/title_histories"
            app:layout_scrollFlags="enterAlways|scroll">

            <RelativeLayout
                android:id="@+id/navigation"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ib_menu"
                    android:layout_width="33dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:paddingLeft="15dp"
                    android:src="@drawable/ic_menu_white_24dp" />

                <TextView
                    style="@style/TextAppearance.App.Topbar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@id/ib_menu"
                    android:gravity="center_vertical"
                    android:text="@string/title_histories" />

                <TextView
                    android:id="@+id/tv_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:singleLine="true"
                    android:text="@string/clear"
                    android:textAppearance="@style/TextAppearance.App.Topbar.Title" />
            </RelativeLayout>
        </derson.com.multipletheme.colorUi.widget.ColorToolbar>
    </derson.com.multipletheme.colorUi.widget.ColorAppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            style="@style/TextAppearance.App.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/no_data_tips"
            android:textColor="@color/gray_dark" />

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
