<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="@dimen/navigation_bottom_bar_size"
        android:paddingTop="?navigationTopBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="?view_background"
                android:padding="@dimen/padding_very_small">

                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="@dimen/size_xl"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bili_default_image_tv_16_10"
                    android:transitionName="shareTransition" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/cover"
                    android:layout_alignTop="@+id/cover"
                    android:layout_marginLeft="@dimen/padding_very_small"
                    android:layout_toRightOf="@+id/cover"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="3"
                    android:paddingBottom="@dimen/padding_very_small"
                    android:paddingTop="@dimen/padding_very_small"
                    android:text="@string/author_video_loading"
                    android:textAppearance="@style/TextAppearance.App.Title" />

                <derson.com.multipletheme.colorUi.widget.ColorTextView
                    android:id="@+id/nick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cover"
                    android:layout_marginTop="@dimen/padding_very_small"
                    android:text=" - "
                    android:textAppearance="@style/TextAppearance.App.Subtitle"
                    android:textColor="?android:textColorSecondary"
                    android:textColorLink="?colorPrimary" />

                <TextView
                    android:id="@+id/info_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nick"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:minWidth="50.0dip"
                    android:text=" - "
                    android:textAppearance="@style/TextAppearance.App.Subtitle"
                    android:textColor="?android:textColorSecondary" />

                <TextView
                    android:id="@+id/info_danmakus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nick"
                    android:layout_marginLeft="@dimen/item_spacing"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:layout_toRightOf="@+id/info_views"
                    android:text=" - "
                    android:textAppearance="@style/TextAppearance.App.Subtitle"
                    android:textColor="?android:textColorSecondary" />


                <derson.com.multipletheme.colorUi.widget.ColorButton
                    android:id="@+id/play"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/item_spacing"
                    android:background="@drawable/ripple_background"
                    android:text="@string/play"
                    android:theme="@style/Widget.App.Button.Normal" />

                <TextView
                    android:id="@+id/info_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/info_views"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:text=" - "
                    android:textAppearance="@style/TextAppearance.App.Subtitle"
                    android:textColor="?android:textColorSecondary" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <include layout="@layout/bili_app_layout_dividing" />

                <android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/height_middle"
                    android:background="?view_background" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/margin_very_small"
                    android:background="@drawable/shadow_top_dig" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="@dimen/margin_very_small_negative" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/bili_app_layout_navigation_top_bar" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/navigation_bottom_bar_size"
        android:layout_gravity="bottom"
        android:background="?view_background">

        <include layout="@layout/bili_app_layout_dividing" />

        <LinearLayout
            android:id="@+id/bottom_bar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <derson.com.multipletheme.colorUi.widget.ColorImageView
                android:id="@+id/action_download"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:src="@drawable/ic_file_download_grey600_24dp"
                android:theme="@style/Widget.App.ImageView.Gray" />

            <derson.com.multipletheme.colorUi.widget.ColorImageView
                android:id="@+id/action_addfav"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:src="@drawable/ic_star_grey600_24dp"
                android:theme="@style/Widget.App.ImageView.Gray" />

            <derson.com.multipletheme.colorUi.widget.ColorImageView
                android:id="@+id/action_comment"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:src="@drawable/ic_menu_comment"
                android:theme="@style/Widget.App.ImageView.Gray" />

            <derson.com.multipletheme.colorUi.widget.ColorImageView
                android:id="@+id/action_share"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:src="@drawable/ic_share_grey600_24dp"
                android:theme="@style/Widget.App.ImageView.Gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/action_mode_bar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/action_download_all"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/cache_all"
                android:textAppearance="@style/TextAppearance.App.Title" />

            <derson.com.multipletheme.colorUi.widget.ColorTextView
                android:id="@+id/action_download_resolution"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="?selectableItemBackgroundBorderless"
                android:drawableRight="@drawable/abc_spinner_mtrl_am_alpha"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.App.Title" />

            <TextView
                android:id="@+id/action_download_manager"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="@string/cache_list"
                android:textAppearance="@style/TextAppearance.App.Title" />
        </LinearLayout>
    </FrameLayout>
</FrameLayout>